--- a/picture/readFrontend/static/src/css/style.css
+++ b/picture/readFrontend/static/src/css/style.css
@@ -309,9 +309,13 @@ a:hover {
     background-color: #eee;
     border-bottom: 1px solid #ccc;
     font-size: 12px;
+    line-height: 18px;
     overflow: hidden;
     margin: 0;
-    padding: 8px 10px;
+    padding: 6px 10px;
+    text-align: center;
+    text-align-last: left;
+    word-break: break-all;
 }
 
 .book-list-remark {
@@ -340,7 +344,7 @@ a:hover {
 
 .pagination-box li a {
     padding: 4px 10px;
-    margin: 0 1px;
+    margin: 1px;
     border-radius: 4px;
 }
 
@@ -396,19 +400,22 @@ a:hover {
     height: 160px;
     background: #eee;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
 }
 
-.article-item-2 .article-cover:after {
+/*.article-item-2 .article-cover:after {
     content: " ";
     display: inline-block;
     vertical-align: middle;
     height: 100%;
-}
+}*/
 
 .article-item-2 .article-cover img {
-    width: 100%;
-    max-height: 100%;
-    vertical-align: middle;
+    /*width: 100%;*/
+    height: 100%;
+    /*vertical-align: middle;*/
 }
 
 .article-item-2 .article-title {
@@ -420,9 +427,9 @@ a:hover {
     -webkit-line-clamp: 2;
 }
 
-.article-item-3 .article-cover {
+/*.article-item-3 .article-cover {
     height: 170px;
-}
+}*/
 
 .article-detail .article-header {
     text-align: center;
@@ -449,6 +456,8 @@ a:hover {
 
 .article-detail .article-content img {
     margin: 5px 0;
+    max-width: 100% !important;
+    height: auto !important;
 }
 
 .model-item-1 {
@@ -462,26 +471,31 @@ a:hover {
     height: 160px;
     width: 100%;
     background-color: #eee;
-    border-bottom: 1px solid #ccc;
+    /*border-bottom: 1px solid #ccc;*/
     text-align: center;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
 }
 
 .model-remark {
     line-height: 24px;
     padding: 10px 20px;
+    text-align: center;
+    text-align-last: left;
 }
 
-.model-cover::after {
+/*.model-cover::after {
     content: " ";
     display: inline-block;
     vertical-align: middle;
     height: 100%;
-}
+}*/
 
 .model-cover img {
-    max-height: 100%;
-    width: 100%;
-    vertical-align: middle;
+    height: 100%;
+    /*width: 100%;*/
+    /*vertical-align: middle;*/
 
 }
 
@@ -536,6 +550,9 @@ a:hover {
     border-bottom: 1px dashed #ccc;
     line-height: 32px;
     text-indent: 20px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .home-right-box {
@@ -614,17 +631,17 @@ a:hover {
 }
 
 .model-item-6 .model-cover {
-    width: 20%;
-    float: left;
-    height: auto;
+    /*width: 20%;*/
+    /*float: left;*/
+    height: 228px;
     border: 1px solid #ccc;
 }
 
 .model-item-6 .model-info {
-    float: left;
+    /*float: left;*/
     color: #666;
     line-height: 24px;
-    margin-left: 35px;
+    padding-left: 25px;
 }
 
 .model-item-6 .model-other span {
@@ -684,9 +701,12 @@ a:hover {
 
 .tag-header .tag-remark {
     color: #000;
-    padding: 10px 0px 0px 20px;
+    padding: 10px 10px 0px 10px;
     font-size: 14px;
     line-height: 24px;
+    text-align: center;
+    text-align-last: left;
+    word-break: break-all;
 }
 
 .tag-header .tag-collapse {
@@ -730,16 +750,19 @@ a:hover {
 
 .gallery-detail-header>* {
     text-align: center;
-    margin: 10px;
+    margin: 5px;
 }
 
 .gallery-detail-header .gallery-detail-title {
     font-size: 20px;
     font-weight: bold;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .gallery-detail-header .gallery-detail-tags a {
-    margin: 0 5px;
+    margin: 2px;
     padding: 2px 5px;
     background: #999;
     color: #fff;
@@ -835,4 +858,14 @@ footer {
     color: #000;
     display: inline-block;
     margin: 0 9px 0 0;
+}
+
+@media (max-width: 768px) {
+    .article-item-2 .article-cover {
+        height: 135px;
+    }
+
+    .gallery-detail-header>* {
+        text-align: left;
+    }
 }
