--- a/picture/readFrontend/templates/pc/home.ejs
+++ b/picture/readFrontend/templates/pc/home.ejs
@@ -102,7 +102,7 @@
                 <div class="border book-list-box">
                     <h2 class="book-list-title">今日女神</h2>
                     <div class="book-list">
-                        <% todayModels.forEach(function(model){ %>
+                        <% todayModels.slice(0,6).forEach(function(model){ %>
                         <div class="col-md-2 col-sm-3 col-xs-4 ">
                             <a class="model-item-1" href="/model/<%= model.modelId%>">
                                 <div class="model-cover"><img src="<%= branchInfo.pictureUrl+model.cover%>" alt="<%= model.name%>"></div>
