--- a/picture/readFrontend/templates/pc/common/footer.ejs
+++ b/picture/readFrontend/templates/pc/common/footer.ejs
@@ -2,19 +2,24 @@
 <div class="container">
     <div id="firendlink">
         <h5>友情连接：</h5>
-        <a target="_blank" href="https://www.biquwx.la/"> 宅男女神</a>
-        <a target="_blank" href="https://www.biquwx.la/0_383/">内地宅男女神</a>
-        <a target="_blank" href="https://www.biquwx.la/3_3918/">日本宅男女神</a>
-        <a target="_blank" href="https://www.biquwx.la/0_921/">韩国宅男女神</a>
-        <a target="_blank" href="https://www.biquwx.la/0_925/">美媛馆</a>
-        <a target="_blank" href="https://www.biquwx.la/0_383/">秀人网</a>
-        <a target="_blank" href="https://www.biquwx.la/3_3918/">尤果网</a>
-        <a target="_blank" href="http://www.35zww.com/">模范学院</a>
-        <a target="_blank" href="http://www.tudoutxt.com/">尤蜜荟</a>
-        <a target="_blank" href="http://www.ting456.com/">推女郎</a>
-        <a target="_blank" href="http://book.guidaye.com/">瑞丝馆</a>
-        <a target="_blank" href="http://book.guidaye.com/">克拉女神</a>
-        <a target="_blank" href="http://book.guidaye.com/">体育画报</a>
+        <a target="_blank" href="/modelList/"> 宅男女神</a>
+        <a target="_blank" href="/modelList/209/1">内地女神</a>
+        <a target="_blank" href="/modelList/213/1">日本女神</a>
+        <a target="_blank" href="/modelList/214/1">韩国女神</a>
+        <a target="_blank" href="/modelList/219/1">亚洲美女</a>
+        <a target="_blank" href="/galleryList/125/1">美媛馆</a>
+        <a target="_blank" href="/galleryList/124/1">秀人网</a>
+        <a target="_blank" href="/galleryList/144/1">尤果圈</a>
+        <a target="_blank" href="/galleryList/128/1">模范学院</a>
+        <a target="_blank" href="/galleryList/129/1">尤蜜荟</a>
+        <a target="_blank" href="/galleryList/147/1">推女郎</a>
+        <a target="_blank" href="/galleryList/134/1">瑞丝馆</a>
+        <a target="_blank" href="/galleryList/158/1">克拉女神</a>
+        <a target="_blank" href="/galleryList/47/1">日本女优</a>
+        <a target="_blank" href="/galleryList/182/1">Young Champion</a>
+        <a target="_blank" href="/galleryList/168/1">沙滩美女</a>
+        <a target="_blank" href="/galleryList/170/1">户外美女</a>
+        <a target="_blank" href="/galleryList/70/1">大尺度美女</a>
     </div>
 </div>
 <footer>
@@ -25,3 +30,10 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- <script language="javascript" type="text/javascript" src="/static/src/js/core.js?v=<%= branchInfo.staticVersion%>"></script> -->
+<script type="text/javascript">
+$(function() {
+    $(".gallery-cover img").error(function() {
+        $(this).parent().parent().parent().hide();
+    })
+});
+</script>
