--- a/picture/readFrontend/templates/pc/common/mainHeader.ejs
+++ b/picture/readFrontend/templates/pc/common/mainHeader.ejs
@@ -73,12 +73,12 @@
         <div class="search-box-right">
             <a class="to-find-model" href="/findModel">找美女</a>
             <span style="color:#dd4b39;font-weight: bold;margin-left: 20px;">热门搜索：</span>
-            <a href="/galleryList">克拉女神</a>
-            <a href="/galleryList">语画界</a>
-            <a href="/galleryList">美媛馆</a>
-            <a href="/galleryList">波萝社</a>
-            <a href="/galleryList">魅妍社</a>
-            <a href="/galleryList">模范学院</a>
+            <a href="/galleryList/158/1">克拉女神</a>
+            <a href="/galleryList/138/1">语画界</a>
+            <a href="/galleryList/125/1">美媛馆</a>
+            <a href="/galleryList/148/1">波萝社</a>
+            <a href="/galleryList/127/1">魅妍社</a>
+            <a href="/galleryList/128/1">模范学院</a>
         </div>
     </div>
 </div>
