--- a/picture/readFrontend/templates/pc/model.ejs
+++ b/picture/readFrontend/templates/pc/model.ejs
@@ -132,7 +132,7 @@
                     </div>
                     <% if(relatedPicturesCount>12){ %>
                     <div class="book-list-footer">
-                        <a class="btn btn-primary btn-xs btn-more" href="/modelAlbum/">更多</a>
+                        <a class="btn btn-primary btn-xs btn-more" href="/<%= model.modelId%>/modelAlbum/">更多</a>
                     </div>
                     <% } %>
                 </div>
@@ -174,7 +174,7 @@
                 <h2 class="book-list-header">热点资讯</h2>
                 <div class="book-list">
                     <% recommendArticles.forEach(function(article){ %>
-                    <a class="col-md-12 col-xs-6 col-sm-4 article-item-2" href="/article/<%= article.articleId%>" target="_blank">
+                    <a class="col-md-12 col-xs-6 col-sm-4 article-item-2" href="/article/<%= article.articleId%>">
                         <div class="article-cover"><img src="<%= branchInfo.pictureUrl+article.cover%>"></div>
                         <div class="article-title">
                             <%= article.title%>
