--- a/picture/readFrontend/static/src/css/style.css
+++ b/picture/readFrontend/static/src/css/style.css
@@ -437,6 +437,10 @@ a:hover {
     padding: 10px 0;
 }
 
+.article-detail {
+    border-bottom: 1px dashed #ccc;
+}
+
 .article-detail .article-time {
     color: #999;
     font-size: 14px;
@@ -447,7 +451,6 @@ a:hover {
 .article-detail .article-content {
     padding-top: 20px;
     border-top: 1px dashed #ccc;
-    border-bottom: 1px dashed #ccc;
 }
 
 .article-detail .article-content a {
