--- a/picture/readFrontend/templates/pc/paihang.ejs
+++ b/picture/readFrontend/templates/pc/paihang.ejs
@@ -5,7 +5,7 @@
         <div class="col-md-9 padding-0 row">
             <div class="col-xs-12 book-box">
                 <div class="border book-list-box">
-                    <h2 class="book-list-header">现在位置：<a href="/">首页</a> &raquo; <a href="/paihangs/">女神情报</a>&raquo; <a href="/paihang/<%= rank.rankId %>">
+                    <h2 class="book-list-header">现在位置：<a href="/">首页</a> &raquo; <a href="/paihang/">女神情报</a>&raquo; <a href="/paihang/<%= rank.rankId %>">
                             <%= rank.name %></a></h2>
                     <div class="book-list-remark">
                         <%= rank.name %>第
