--- a/picture/readFrontend/templates/pc/gallery.ejs
+++ b/picture/readFrontend/templates/pc/gallery.ejs
@@ -37,7 +37,7 @@
                     <div class="gallery-detail-content">
                         <% pics.forEach(function(pic){%>
                         <div class="gallery-detail-img">
-                            <img src="<%= picture.imgHost+pic%>">
+                            <img src="<%= (/\/\/img\..+/.test(picture.imgHost)?'https://img.99nvshen.com':picture.imgHost)+pic%>">
                         </div>
                         <% }); %>
                     </div>
@@ -73,7 +73,7 @@
                     <% recommendPictures.forEach(function(picture){ %>
                     <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
                         <a class="gallery-item" href="/gallery/<%= picture.pictureId%>" target="_blank">
-                            <div class="gallery-cover"><img src="<%= picture.imgHost+picture.cover%>" alt="<%= picture.title%>"></div>
+                            <div class="gallery-cover"><img src="<%= (/\/\/img\..+/.test(picture.imgHost)?'https://img.99nvshen.com':picture.imgHost)+picture.cover%>" alt="<%= picture.title%>"></div>
                             <div class="gallery-title hidden-xs hidden-sm">
                                 <%= picture.title%>
                             </div>
