--- a/picture/readFrontend/templates/pc/model.ejs
+++ b/picture/readFrontend/templates/pc/model.ejs
@@ -119,7 +119,7 @@
                         <% relatedPictures.forEach(function(picture){ %>
                         <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
                             <a class="gallery-item" href="/gallery/<%= picture.pictureId%>" target="_blank">
-                                <div class="gallery-cover"><img src="<%= picture.imgHost+picture.cover%>" alt="<%= picture.title%>"></div>
+                                <div class="gallery-cover"><img src="<%= (/\/\/img\..+/.test(picture.imgHost)?'https://img.99nvshen.com':picture.imgHost)+picture.cover%>" alt="<%= picture.title%>"></div>
                                 <div class="gallery-title hidden-xs hidden-sm" style="width: 100%;">
                                     <%= picture.title%>
                                 </div>
@@ -132,7 +132,7 @@
                     </div>
                     <% if(relatedPicturesCount>12){ %>
                     <div class="book-list-footer">
-                        <a class="btn btn-primary btn-xs btn-more" href="/<%= model.modelId%>/modelAlbum/">更多</a>
+                        <a class="btn btn-primary btn-xs btn-more" href="/model/<%= model.modelId%>/album/">更多</a>
                     </div>
                     <% } %>
                 </div>
