--- a/picture/readFrontend/templates/pc/modelAlbum.ejs
+++ b/picture/readFrontend/templates/pc/modelAlbum.ejs
@@ -17,7 +17,7 @@
                         <% pictures.forEach(function(picture){ %>
                         <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
                             <a class="gallery-item" href="/gallery/<%= picture.pictureId%>" target="_blank">
-                                <div class="gallery-cover"><img src="<%= picture.imgHost+picture.cover%>" alt="<%= picture.title%>"></div>
+                                <div class="gallery-cover"><img src="<%= (/\/\/img\..+/.test(picture.imgHost)?'https://img.99nvshen.com':picture.imgHost)+picture.cover%>" alt="<%= picture.title%>"></div>
                                 <div class="gallery-title hidden-xs hidden-sm" style="width: 100%;">
                                     <%= picture.title%>
                                 </div>
@@ -32,24 +32,24 @@
                         <ul class="pagination">
                             <% if(pagination.currentPage>1){%>
                             <li>
-                                <a href="/model/<%= model.modelId%>/modelAlbum/<%= pagination.currentPage-1%>/" aria-label="Previous">
+                                <a href="/model/<%= model.modelId%>/album/<%= pagination.currentPage-1%>/" aria-label="Previous">
                                     <span aria-hidden="true">&laquo;</span>
                                 </a>
                             </li>
                             <% } %>
                             <% pagination.pages.forEach(function(page){ %>
-                            <li class=<%=page==pagination.currentPage?"active":""%>><a href="/model/<%= model.modelId%>/modelAlbum/<%= page%>/">
+                            <li class=<%=page==pagination.currentPage?"active":""%>><a href="/model/<%= model.modelId%>/album/<%= page%>/">
                                     <%= page%></a></li>
                             <% }); %>
                             <% if(pagination.currentPage<pagination.totalPage){%>
                             <li>
-                                <a href="/model/<%= model.modelId%>/modelAlbum/<%= pagination.currentPage+1%>/" aria-label="Next">
+                                <a href="/model/<%= model.modelId%>/album/<%= pagination.currentPage+1%>/" aria-label="Next">
                                     <span aria-hidden="true">&raquo;</span>
                                 </a>
                             </li>
                             <% } %>
                             <% if(pagination.pages[pagination.pages.length-1]<pagination.totalPage){%>
-                            <li><a href="/model/<%= model.modelId%>/modelAlbum/<%= pagination.totalPage%>/">...
+                            <li><a href="/model/<%= model.modelId%>/album/<%= pagination.totalPage%>/">...
                                     <%= pagination.totalPage%></a></li>
                             <% } %>
                         </ul>
@@ -63,7 +63,7 @@
                 <div class="book-list">
                     <% recommendPictures.forEach(function(picture){ %>
                     <a class="gallery-item" href="/gallery/<%= picture.pictureId%>" target="_blank">
-                        <div class="gallery-cover"><img src="<%= picture.imgHost+picture.cover%>" alt="<%= picture.title%>"></div>
+                        <div class="gallery-cover"><img src="<%= (/\/\/img\..+/.test(picture.imgHost)?'https://img.99nvshen.com':picture.imgHost)+picture.cover%>" alt="<%= picture.title%>"></div>
                         <div class="gallery-title hidden-xs hidden-sm" style="width: 100%;">
                             <%= picture.title%>
                         </div>
