修改标题和关键字

--- a/picture/readFrontend/templates/pc/common/footer.ejs
+++ b/picture/readFrontend/templates/pc/common/footer.ejs
@@ -32,8 +32,24 @@
 <!-- <script language="javascript" type="text/javascript" src="/static/src/js/core.js?v=<%= branchInfo.staticVersion%>"></script> -->
 <script type="text/javascript">
 $(function() {
+    $.get("/branchVisitStat", function(result) {
+        console.log(result)
+    });
     $(".gallery-cover img").error(function() {
         $(this).parent().parent().parent().hide();
     })
 });
+</script>
+<script>
+(function() {
+    var bp = document.createElement('script');
+    var curProtocol = window.location.protocol.split(':')[0];
+    if (curProtocol === 'https') {
+        bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+    } else {
+        bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+    }
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(bp, s);
+})();
 </script>
