--- a/picture/readFrontend/static/src/css/style.css
+++ b/picture/readFrontend/static/src/css/style.css
@@ -746,9 +746,10 @@ a:hover {
     margin-top: 5px;
     overflow: hidden;
     text-overflow: ellipsis;
-    display: -webkit-box;
+    white-space: nowrap;
+    /*display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 2;*/
 }
 
 .gallery-detail-header>* {
