--- a/picture/readFrontend/templates/pc/search.ejs
+++ b/picture/readFrontend/templates/pc/search.ejs
@@ -38,12 +38,9 @@
                     <div class="book-list">
                         <% pictures.forEach(function(picture){ %>
                         <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-                            <a class="gallery-item" href="/gallery/<%= picture.pictureId%>" target="_blank">
+                            <a class="gallery-item" href="/gallery/<%= picture.pictureId%>" target="_blank" title="<%= picture.title%>">
                                 <div class="gallery-cover"><img src="<%= (/\/\/img\..+/.test(picture.imgHost)?'https://img.99nvshen.com':/\/\/t1\..+/.test(picture.imgHost)?'https://img1.99nvshen.com':picture.imgHost)+picture.cover%>" alt="<%= picture.title%>"></div>
-                                <div class="gallery-title hidden-xs hidden-sm">
-                                    <%= picture.title%>
-                                </div>
-                                <div class="gallery-title-1 hidden-lg hidden-md">
+                                <div class="gallery-title-1">
                                     <%= picture.title%>
                                 </div>
                             </a>
