--- a/picture/readFrontend/templates/pc/gallery.ejs
+++ b/picture/readFrontend/templates/pc/gallery.ejs
@@ -37,8 +37,7 @@
                     <div class="gallery-detail-content">
                         <% pics.forEach(function(pic,index){%>
                         <a class="gallery-detail-img" href="/galleryImg/<%= picture.pictureId%>/<%= startIndex+index+1%>" target="_blank">
-                            <img src="<%= (/\/\/img\..+/.test(picture.imgHost)?'https://img.99nvshen.com':/\/\/t1\..+/.test(picture.imgHost)?'https://img1.99nvshen.com':picture.imgHost)+pic%>">
-                        </a>
+                            <img src="<%= branchInfo.pictureUrl+pic%>"> </a>
                         <% }); %>
                     </div>
                 </div>
@@ -73,7 +72,7 @@
                     <% recommendPictures.forEach(function(picture){ %>
                     <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
                         <a class="gallery-item" href="/gallery/<%= picture.pictureId%>" target="_blank" title="<%= picture.title%>">
-                            <div class="gallery-cover"><img src="<%= (/\/\/img\..+/.test(picture.imgHost)?'https://img.99nvshen.com':/\/\/t1\..+/.test(picture.imgHost)?'https://img1.99nvshen.com':picture.imgHost)+picture.cover%>" alt="<%= picture.title%>"></div>
+                            <div class="gallery-cover"><img src="<%= branchInfo.pictureUrl+picture.cover%>" alt="<%= picture.title%>"></div>
                             <div class="gallery-title-1">
                                 <%= picture.title%>
                             </div>
