--- a/picture/readFrontend/templates/pc/galleryImg.ejs
+++ b/picture/readFrontend/templates/pc/galleryImg.ejs
@@ -10,8 +10,7 @@
                 <div class="book-list">
                     <div style="text-align: center;font-weight: bold;color: red;">点击图片进入下一页~.~</div>
                     <a class="gallery-img" href="/galleryImg/<%= picture.pictureId%>/<%= pagination.currentPage+1%>">
-                        <img src="<%= (/\/\/img\..+/.test(picture.imgHost)?'https://img.99nvshen.com':/\/\/t1\..+/.test(picture.imgHost)?'https://img1.99nvshen.com':picture.imgHost)+pic%>">
-                    </a>
+                        <img src="<%= branchInfo.pictureUrl+pic%>"> </a>
                 </div>
                 <nav aria-label="Page navigation" class="pagination-box">
                     <ul class="pagination">
@@ -44,7 +43,7 @@
                     <% recommendPictures.forEach(function(picture){ %>
                     <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
                         <a class="gallery-item" href="/gallery/<%= picture.pictureId%>" target="_blank" title="<%= picture.title%>">
-                            <div class="gallery-cover"><img src="<%= (/\/\/img\..+/.test(picture.imgHost)?'https://img.99nvshen.com':/\/\/t1\..+/.test(picture.imgHost)?'https://img1.99nvshen.com':picture.imgHost)+picture.cover%>" alt="<%= picture.title%>"></div>
+                            <div class="gallery-cover"><img src="<%= branchInfo.pictureUrl+picture.cover%>" alt="<%= picture.title%>"></div>
                             <div class="gallery-title-1">
                                 <%= picture.title%>
                             </div>
