--- a/picture/readFrontend/templates/pc_da12/common/mainHeader.ejs
+++ b/picture/readFrontend/templates/pc_da12/common/mainHeader.ejs
@@ -1,4 +1,4 @@
-<div class="container-fluid hidden-xs topbar">
+<!-- <div class="container-fluid hidden-xs topbar">
     <div class="container topbar-con">
         <div class="row">
             <div class="col-sm-12">
@@ -8,7 +8,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <div class="container header hidden-xs">
     <div class="row">
         <div class="col-sm-4 logo">
