--- a/picture/readFrontend/templates/pc_da12/common/footer.ejs
+++ b/picture/readFrontend/templates/pc_da12/common/footer.ejs
@@ -2,29 +2,26 @@
 <div class="container">
     <div id="firendlink">
         <h5>友情连接：</h5>
-        <a target="_blank" href="/modelList/"> 宅男女神</a>
-        <a target="_blank" href="/modelList/209/1">内地女神</a>
-        <a target="_blank" href="/modelList/213/1">日本女神</a>
-        <a target="_blank" href="/modelList/214/1">韩国女神</a>
-        <a target="_blank" href="/modelList/219/1">亚洲美女</a>
-        <a target="_blank" href="/galleryList/125/1">美媛馆</a>
-        <a target="_blank" href="/galleryList/124/1">秀人网</a>
-        <a target="_blank" href="/galleryList/144/1">尤果圈</a>
-        <a target="_blank" href="/galleryList/128/1">模范学院</a>
-        <a target="_blank" href="/galleryList/129/1">尤蜜荟</a>
-        <a target="_blank" href="/galleryList/147/1">推女郎</a>
-        <a target="_blank" href="/galleryList/134/1">瑞丝馆</a>
-        <a target="_blank" href="/galleryList/158/1">克拉女神</a>
-        <a target="_blank" href="/galleryList/47/1">日本女优</a>
-        <a target="_blank" href="/galleryList/182/1">Young Champion</a>
-        <a target="_blank" href="/galleryList/168/1">沙滩美女</a>
-        <a target="_blank" href="/galleryList/170/1">户外美女</a>
-        <a target="_blank" href="/galleryList/70/1">大尺度美女</a>
+        <a target="_blank" href="/">美女图片</a>
+        <a target="_blank" href="/galleryList/1/1">秀人网</a>
+        <a target="_blank" href="/galleryList/23/1">魅妍社</a>
+        <a target="_blank" href="/galleryList/7/1">Ligui丽柜</a>
+        <a target="_blank" href="/galleryList/51/1">丝间舞</a>
+        <a target="_blank" href="/galleryList/14/1">尤蜜荟</a>
+        <a target="_blank" href="/galleryList/5/1">AISS爱丝</a>
+        <a target="_blank" href="/galleryList/16/1">Pans写真</a>
+        <a target="_blank" href="/galleryList/4/1">克拉女神</a>
+        <a target="_blank" href="/galleryList/20/1">头条女神</a>
+        <a target="_blank" href="/galleryList/27/1">异思趣向</a>
+        <a target="_blank" href="/galleryList/75/1">禁忌摄影</a>
+        <a target="_blank" href="/galleryList/54/1">中国腿模</a>
+        <a target="_blank" href="/galleryList/29/1">DISI第四印象</a>
+        <a target="_blank" href="/galleryList/6/1">ROSI写真</a>
     </div>
 </div>
 <footer>
     <div class="container">
-        <p>本站所收录作品均是来源于网友上传,与本站立场无关,如有侵犯版权或涉黄问题,请来信告知,本站立即予以删除。 <br />邮箱:9invshen.com@gmail.com</p>
+        <p>本站所收录作品均收集于网络,如有侵犯版权或涉黄问题,请来信告知,本站立即予以删除。 <br />邮箱:9invshen.com@gmail.com</p>
     </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
