--- a/picture/readFrontend/templates/pc_da12/common/footer.ejs
+++ b/picture/readFrontend/templates/pc_da12/common/footer.ejs
@@ -28,12 +28,12 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- <script language="javascript" type="text/javascript" src="/static/src/js/core.js?v=<%= branchInfo.staticVersion%>"></script> -->
 <script type="text/javascript">
-// $(function() {
-//     $.get("/branchVisitStat", function(result) {
-//         console.log(result)
-//     });
-//     $(".gallery-cover img").error(function() {
-//         $(this).parent().parent().parent().hide();
-//     })
-// });
+$(function() {
+    $.get("/branchVisitStat", function(result) {
+        console.log(result)
+    });
+    $(".gallery-cover img").error(function() {
+        $(this).parent().parent().parent().hide();
+    })
+});
 </script>
