--- a/picture/readFrontend/templates/pc_da12/common/mainHeader.ejs
+++ b/picture/readFrontend/templates/pc_da12/common/mainHeader.ejs
@@ -13,7 +13,8 @@
     <div class="row">
         <div class="col-sm-4 logo">
             <a href="/">
-                <%= branchInfo.shorttitle || "宅男女神"%></a>
+                <img src="/static/dsrc/images/9iktb.png">
+                <!-- <%= branchInfo.shorttitle || "宅男女神"%></a> -->
         </div>
         <div class="col-sm-8 text-right hidden-xs">
             <form method="get" action="/search" class="search-form" id="form">
