--- a/picture/readFrontend/templates/pc_da12/gallery.ejs
+++ b/picture/readFrontend/templates/pc_da12/gallery.ejs
@@ -56,6 +56,31 @@
         </div>
     </div>
 </div>
+<% if(recommendTagPictures && recommendTagPictures.length){%>
+<div class="container">
+    <div class="row ">
+        <div class="col-md-12 col-xs-12 book-box">
+            <div class="border book-list-box">
+                <h2 class="book-list-title">
+                    <%= picture.tags[0].name%>相关图集推荐</h2>
+                <div class="book-list">
+                    <% recommendTagPictures.forEach(function(picture){ %>
+                    <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+                        <a class="gallery-item" href="/gallery/<%= picture.pictureId%>" target="_blank" title="<%= picture.title%>">
+                            <div class="gallery-cover"><img src="<%= branchInfo.pictureUrl+picture.cover%>" alt="<%= picture.title%>"></div>
+                            <div class="gallery-title-1">
+                                <%= picture.title%>
+                            </div>
+                        </a>
+                    </div>
+                    <% }); %>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<% } %>
+<% if(recommendPictures && recommendPictures.length){%>
 <div class="container">
     <div class="row ">
         <div class="col-md-12 col-xs-12 book-box">
@@ -77,7 +102,17 @@
         </div>
     </div>
 </div>
-<script type="text/javascript">
-</script>
+<% } %>
 <%- include('common/footer', {}); %>
 <%- include('common/bottom', {}); %>
+<script type="text/javascript">
+$("window").on("load", function() {
+    var imgs = $(".gallery-detail-img img");
+    for (var i = 0; i < imgs.length; i++) {
+        var img = imgs[i];
+        console.log(img.naturalWidth, img.naturalHeight);
+    }
+    console.log(this);
+    console.log($(this).parent());
+})
+</script>
