--- a/picture/readFrontend/templates/pc/galleryImg.ejs
+++ b/picture/readFrontend/templates/pc/galleryImg.ejs
@@ -10,7 +10,7 @@
                 <div class="book-list">
                     <div style="text-align: center;font-weight: bold;color: red;">点击图片进入下一页~.~</div>
                     <a class="gallery-img" href="/galleryImg/<%= picture.pictureId%>/<%= pagination.currentPage+1%>">
-                        <img src="<%= branchInfo.pictureUrl+pic%>"> </a>
+                        <img src="<%= branchInfo.pictureUrl+pic+branchInfo.imgWatermark%>"> </a>
                 </div>
                 <nav aria-label="Page navigation" class="pagination-box">
                     <ul class="pagination">
