--- a/picture/readFrontend/templates/pc/common/mainHeader.ejs
+++ b/picture/readFrontend/templates/pc/common/mainHeader.ejs
@@ -3,7 +3,8 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="topbar-sethome">
-                    欢迎访问<a href="/"> 爱女神</a> ｜ <a href="/">宅男女神</a> ｜ <a href="/articles">最新美女情报</a> ｜ <a href="/modelList">最全美女资料</a> ｜ <a href="/galleryList">高清美女图片</a>
+                    欢迎访问<a href="/">
+                        <%= branchInfo.shorttitle || "宅男女神" %></a> ｜ <a href="/">宅男女神</a> ｜ <a href="/articles">最新美女情报</a> ｜ <a href="/modelList">最全美女资料</a> ｜ <a href="/galleryList">高清美女图片</a>
                 </div>
             </div>
         </div>
