--- a/picture/readFrontend/templates/pc/common/footer.ejs
+++ b/picture/readFrontend/templates/pc/common/footer.ejs
@@ -48,8 +48,8 @@ $(function() {
     $.get("/branchVisitStat", function(result) {
         console.log(result)
     });
-    $(".gallery-cover img").error(function() {
-        $(this).parent().parent().parent().hide();
-    })
+    // $(".gallery-cover img").error(function() {
+    //     $(this).parent().parent().parent().hide();
+    // })
 });
 </script>
