--- a/book/readFrontend/templates/pc/common/footer.ejs
+++ b/book/readFrontend/templates/pc/common/footer.ejs
@@ -24,8 +24,8 @@
         <p>本站所收录作品均是来源于网友上传,与本站立场无关,如有侵犯版权或涉黄问题,请来信告知,本站立即予以删除。 <br />邮箱:99amn.com@gmail.com</p>
     </div>
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="/static/npm/jquery.min.js"></script>
+<script src="/static/npm/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script language="javascript" type="text/javascript" src="/static/src/js/core.js?v=<%= branchInfo.staticVersion%>"></script>
 <script type="text/javascript">
 $(function() {
