--- a/picture/readFrontend/templates/pc_da12/common/footer.ejs
+++ b/picture/readFrontend/templates/pc_da12/common/footer.ejs
@@ -32,8 +32,8 @@
             <% } %>
     </div>
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="/static/npm/jquery.min.js"></script>
+<script src="/static/npm/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- <script language="javascript" type="text/javascript" src="/static/src/js/core.js?v=<%= branchInfo.staticVersion%>"></script> -->
 <script type="text/javascript">
 $(function() {
