--- a/picture/readFrontend/templates/pc_da12/searchGallery.ejs
+++ b/picture/readFrontend/templates/pc_da12/searchGallery.ejs
@@ -30,24 +30,24 @@
                     <ul class="pagination">
                         <% if(pagination.currentPage>1){%>
                         <li>
-                            <a href="/searchGallery/<%= pagination.currentPage-1%>?keyword=<%= searchContent%>" aria-label="Previous">
+                            <a href="/search/<%= pagination.currentPage-1%>?keyword=<%= searchContent%>" aria-label="Previous">
                                 <span aria-hidden="true">&laquo;</span>
                             </a>
                         </li>
                         <% } %>
                         <% pagination.pages.forEach(function(page){ %>
-                        <li class=<%=page==pagination.currentPage?"active":""%>><a href="/searchGallery/<%= page%>?keyword=<%= searchContent%>">
+                        <li class=<%=page==pagination.currentPage?"active":""%>><a href="/search/<%= page%>?keyword=<%= searchContent%>">
                                 <%= page%></a></li>
                         <% }); %>
                         <% if(pagination.currentPage<pagination.totalPage){%>
                         <li>
-                            <a href="/searchGallery/<%= pagination.currentPage+1%>?keyword=<%= searchContent%>" aria-label="Next">
+                            <a href="/search/<%= pagination.currentPage+1%>?keyword=<%= searchContent%>" aria-label="Next">
                                 <span aria-hidden="true">&raquo;</span>
                             </a>
                         </li>
                         <% } %>
                         <% if(pagination.pages[pagination.pages.length-1]<pagination.totalPage){%>
-                        <li><a href="/searchGallery/<%= pagination.totalPage%>?keyword=<%= searchContent%>">...
+                        <li><a href="/search/<%= pagination.totalPage%>?keyword=<%= searchContent%>">...
                                 <%= pagination.totalPage%></a></li>
                         <% } %>
                     </ul>
